创建工单功能成功

--- a/ops-work-order-system/src/main/resources/application.properties
+++ b/ops-work-order-system/src/main/resources/application.properties
@@ -12,11 +12,17 @@ spring.jpa.properties.hibernate.format_sql=true
 # 让JPA使用物理策略命名
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
-# 禁用Open Entity Manager in View模式，避免懒加载问题
-spring.jpa.open-in-view=false
+# 启用Open Entity Manager in View模式，以解决懒加载问题
+spring.jpa.open-in-view=true
 
 # 应用端口
 server.port=8080
 
 # 禁用Spring Security自动生成密码
 spring.security.user.password=admin
+
+# 日志级别配置
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+logging.level.com.example.opsworkordersystem=DEBUG
+logging.level.org.springframework.transaction=DEBUG
