--- a/ops-work-order-system/src/main/resources/application.properties
+++ b/ops-work-order-system/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/ops_work_order_system?useSSL=false&serverTimezone=UTC&createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=@Dk030821
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # 开发环境设置为update可以保留已有的表结构
