--- a/ops-work-order-system/src/main/resources/application.properties
+++ b/ops-work-order-system/src/main/resources/application.properties
@@ -26,3 +26,10 @@ logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 logging.level.com.example.opsworkordersystem=DEBUG
 logging.level.org.springframework.transaction=DEBUG
+
+# Thymeleaf配置
+spring.thymeleaf.cache=false
+spring.thymeleaf.mode=HTML
+spring.thymeleaf.encoding=UTF-8
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
