--- a/ops-work-order-system/src/main/resources/application.properties
+++ b/ops-work-order-system/src/main/resources/application.properties
@@ -1,19 +1,34 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/ops_work_order_system?useSSL=false&serverTimezone=UTC&createDatabaseIfNotExist=true
+# 数据库连接配置
+spring.datasource.url=jdbc:mysql://localhost:3306/ops_work_order_system?useSSL=false&serverTimezone=UTC&createDatabaseIfNotExist=true&useUnicode=true&characterEncoding=utf8&autoReconnect=true&failOverReadOnly=false&maxReconnects=10
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# 开发环境设置为update可以保留已有的表结构
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+# HikariCP连接池优化配置
+spring.datasource.hikari.minimum-idle=10
+spring.datasource.hikari.maximum-pool-size=50
+spring.datasource.hikari.idle-timeout=300000
+spring.datasource.hikari.max-lifetime=1200000
+spring.datasource.hikari.connection-timeout=20000
+spring.datasource.hikari.validation-timeout=3000
+spring.datasource.hikari.leak-detection-threshold=60000
+
+# JPA性能优化配置
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.format_sql=false
+spring.jpa.properties.hibernate.jdbc.batch_size=25
+spring.jpa.properties.hibernate.order_inserts=true
+spring.jpa.properties.hibernate.order_updates=true
+spring.jpa.properties.hibernate.jdbc.batch_versioned_data=true
+spring.jpa.properties.hibernate.generate_statistics=false
 
 # 让JPA使用物理策略命名
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
-# 启用Open Entity Manager in View模式，以解决懒加载问题
-spring.jpa.open-in-view=true
+# 生产环境关闭Open Entity Manager in View模式，避免懒加载问题
+spring.jpa.open-in-view=false
 
 # 应用端口
 server.port=8080
@@ -21,15 +36,28 @@ server.port=8080
 # 禁用Spring Security自动生成密码
 spring.security.user.password=admin
 
-# 日志级别配置
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
-logging.level.com.example.opsworkordersystem=DEBUG
-logging.level.org.springframework.transaction=DEBUG
+# 生产环境日志级别优化
+logging.level.org.hibernate.SQL=WARN
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=WARN
+logging.level.com.example.opsworkordersystem=INFO
+logging.level.org.springframework.transaction=WARN
+logging.level.root=WARN
 
-# Thymeleaf配置
-spring.thymeleaf.cache=false
+# Thymeleaf生产环境配置
+spring.thymeleaf.cache=true
 spring.thymeleaf.mode=HTML
 spring.thymeleaf.encoding=UTF-8
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
+
+# 缓存配置
+spring.cache.type=caffeine
+spring.cache.caffeine.spec=maximumSize=1000,expireAfterWrite=30m
+
+# HTTP压缩
+server.compression.enabled=true
+server.compression.mime-types=text/html,text/xml,text/plain,text/css,application/javascript,application/json
+server.compression.min-response-size=1024
+
+# JVM性能优化建议参数（在启动脚本中设置）
+# -Xms512m -Xmx2g -XX:+UseG1GC -XX:MaxGCPauseMillis=200 -XX:+HeapDumpOnOutOfMemoryError
