--- a/ops-work-order-system/src/main/resources/application.properties
+++ b/ops-work-order-system/src/main/resources/application.properties
@@ -27,8 +27,8 @@ spring.jpa.properties.hibernate.generate_statistics=false
 # 让JPA使用物理策略命名
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
-# 生产环境关闭Open Entity Manager in View模式，避免懒加载问题
-spring.jpa.open-in-view=false
+# 临时启用Open Entity Manager in View模式，解决部门管理懒加载问题
+spring.jpa.open-in-view=true
 
 # 应用端口
 server.port=8080
@@ -36,15 +36,15 @@ server.port=8080
 # 禁用Spring Security自动生成密码
 spring.security.user.password=admin
 
-# 生产环境日志级别优化
-logging.level.org.hibernate.SQL=WARN
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=WARN
-logging.level.com.example.opsworkordersystem=INFO
-logging.level.org.springframework.transaction=WARN
-logging.level.root=WARN
+# 开发调试日志级别
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=DEBUG
+logging.level.com.example.opsworkordersystem=DEBUG
+logging.level.org.springframework.transaction=DEBUG
+logging.level.root=INFO
 
-# Thymeleaf生产环境配置
-spring.thymeleaf.cache=true
+# Thymeleaf开发环境配置
+spring.thymeleaf.cache=false
 spring.thymeleaf.mode=HTML
 spring.thymeleaf.encoding=UTF-8
 spring.thymeleaf.prefix=classpath:/templates/
