--- a/ops-work-order-system/src/main/resources/application.properties
+++ b/ops-work-order-system/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # 数据库连接配置
 spring.datasource.url=jdbc:mysql://localhost:3306/ops_work_order_system?useSSL=false&serverTimezone=UTC&createDatabaseIfNotExist=true&useUnicode=true&characterEncoding=utf8&autoReconnect=true&failOverReadOnly=false&maxReconnects=10
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=@Dk15013771788
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # HikariCP连接池优化配置
@@ -14,7 +14,7 @@ spring.datasource.hikari.validation-timeout=3000
 spring.datasource.hikari.leak-detection-threshold=60000
 
 # JPA性能优化配置
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.format_sql=false
