运维工单系统3.0版

--- a/ops-work-order-system/src/main/resources/application.properties
+++ b/ops-work-order-system/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # 数据库连接配置
 spring.datasource.url=jdbc:mysql://localhost:3306/ops_work_order_system?useSSL=false&serverTimezone=UTC&createDatabaseIfNotExist=true&useUnicode=true&characterEncoding=utf8&autoReconnect=true&failOverReadOnly=false&maxReconnects=10
 spring.datasource.username=root
-spring.datasource.password=@Dk15013771788
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # HikariCP连接池优化配置
