--- a/ops-work-order-system/src/main/resources/application-dev.properties
+++ b/ops-work-order-system/src/main/resources/application-dev.properties
@@ -15,7 +15,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/ops_work_order_system?useSSL=f
 spring.datasource.username=root
 
 # 数据库密码 - 修改为你的MySQL密码（可以为空）
-spring.datasource.password=
+spring.datasource.password='@Dk15013771788'
 
 # 数据库驱动
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
